# dnguyen-site

./: Readme.md  docker-compose.yml
blog/: .gitignore  Cargo.toml  Dockerfile  Readme.md  Rocket.example.toml  Rocket.toml
blog/migrations/: initialize.sql
blog/migrations/2022-01-23-195722_create_posts/: up.sql
blog/src/: main.rs  models.rs  schema.rs
blog/src/lib/: lib.rs
blog/src/lib/http/: dto.rs
blog/src/lib/model/: posts.rs
blog/src/models/: blog_post.rs  dto.rs  mod.rs
blog/src/routes/: blog.rs  console.rs  error.rs  mod.rs  tipjar.rs
blog/src/utils/: htmlify.rs  mod.rs
blog/static/: console.css  highlighting.css  highlighting.min.css  main.css  main.min.css  tipjar.css  tipjar.js
blog/templates/: footer.html.hbs  layout.html.hbs  nav.html.hbs  paginate.html.hbs
blog/templates/blog/: blog_index.html.hbs  index.html.hbs  no_posts.html.hbs  post.html.hbs
blog/templates/console/: console_index.html.hbs
blog/templates/error/: 404.html.hbs
blog/templates/tipjar/: index.html.hbs  thanks.html.hbs
blog/tests/: common.rs  posts.rs
content_manager/: Cargo.toml
content_manager/migrations/2022-01-23-195722_create_posts/: up.sql
content_manager/src/: main.rs
content_manager/src/models/: blog_post.rs  mod.rs
landing/: package.json  vue.config.js
landing/src/: App.vue
landing/src/components/: SideNav.vue
landing/src/router/: index.ts
landing/src/scss/: content.scss
landing/src/views/: About.vue  AboutContact.vue  Contact.vue  Landing.vue  Work.vue
