[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dnguyen_blog"
path = "src/lib/lib.rs"

[[bin]]
name = "dnguyen_blog"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
rocket = { version="0.5.0-rc.1", features=["json", "secrets"] }
rocket_dyn_templates = { version="0.1.0-rc.1", features=["handlebars"] }
tokio-postgres = { version="0.7.2", features=["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
tokio = { version="1.8.0", features=["macros"] }
chrono = { version="0.4.19", features=["serde"] }
serde = "1.0.126"
serde_json = "1.0.64"
uuid = { version="0.8", features=["serde", "v4"] }
bcrypt = "0.10.1"
pulldown-cmark = "0.8.0"
ammonia = "3"

[dev-dependencies]
fake = { version = "2.4", features=["chrono"] }
