[package]
name = "dnguyen_blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version="1.8.0" }
rocket = { version="0.5.0-rc.1" }
rocket_dyn_templates = { version="0.1.0-rc", features=["handlebars"] }
uuid = { version="0.8", features=["v4", "serde"] }
chrono = { version="0.4.19", features=["serde"] }
serde = "1.0.126"
diesel = { version="1.4.4", features = ["postgres", "uuidv07", "chrono"] }
pulldown-cmark = "0.8.0"
pandoc = "0.8"
ammonia = "3"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[dev-dependencies]
fake = { version = "2.4", features=["chrono"] }
